[[bin]]
name = "emap"
[package]
name = "emap"
version = "0.1.0"
edition = "2021"

[dependencies]
# The core windowing and multi-monitor detection engine
tao = "0.30"

# The WebView engine (renders your HTML/JS)
wry = "0.47"

# To get easy information about connected screens/HDMIs
# (Helpful for coordinates and resolution detection)
display-info = "0.5"

# For your offline database (SQLite is best for single-file offline apps)
rusqlite = { version = "0.31", features = ["bundled"] }

# This is your actual Web Server library
actix-web = "4"


serde = { version = "1.0", features = ["derive"] }


serde_json = "1.0"
