[[bin]]
name = "emap"
[package]
name = "emap"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.15", features = ["v3_24"] }
webkit2gtk = "0.18"
# To get easy information about connected screens/HDMIs
# (Helpful for coordinates and resolution detection)
display-info = "0.5"

# For your offline database (SQLite is best for single-file offline apps)
rusqlite = { version = "0.31", features = ["bundled"] }

# This is your actual Web Server library
actix-web = "4"
actix-files = "0.6"


serde = { version = "1.0", features = ["derive"] }


serde_json = "1.0"
mime_guess = "2"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4"
